RESOLVED FIXED269371
[WGSL] Fix arrayLength when using pointer variables
https://bugs.webkit.org/show_bug.cgi?id=269371
Summary [WGSL] Fix arrayLength when using pointer variables
Tadeu Zagallo
Reported 2024-02-14 09:18:12 PST
[WGSL] Fix arrayLength when using pointer variables
Attachments
Tadeu Zagallo
Comment 1 2024-02-14 09:18:24 PST
Tadeu Zagallo
Comment 2 2024-02-14 09:46:24 PST
EWS
Comment 3 2024-02-15 04:10:54 PST
Committed 274712@main (30a16f3e2486): <https://commits.webkit.org/274712@main> Reviewed commits have been landed. Closing PR #24423 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.